...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_toolbar"
            app:titleTextColor="@color/colorWhite"
            android:paddingLeft="@dimen/tool_bar_padding_left_right"
            android:paddingRight="@dimen/tool_bar_padding_left_right">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:hint="@string/journal_title_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/new_entry_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:hint="@string/journal_content_hint"
            android:imeOptions=""
            android:scrollHorizontally="false"
...
