...
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_toolbar"
            app:titleTextColor="@color/colorWhite"
            android:paddingLeft="@dimen/tool_bar_padding_left_right"
            android:paddingRight="@dimen/tool_bar_padding_left_right">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <!-- This RecyclerView widget holds all Journal entry -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarSize="3dp"
            android:scrollbarThumbVertical="@color/colorPrimary"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
...
