...
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register_link">New user? register with email</string>
    <string name="btn_login_link">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
...
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter Email used for registration, a password reset link would be sent to you.</string>
    <string name="save_option">SAVE</string>
    <string name="share_option_title">SHARE</string>
    <string name="sign_out_option_title">SIGN OUT</string>


    <string name="WEB_CLIENT_ID">170946863461-7vbv1h40r3qi7l7nmpsgnlfni6u57khu.apps.googleusercontent.com</string>
    <string name="ANDROID_CLIENT_ID">170946863461-0igpfmear2e1ut8fb78pel8406npuej0.apps.googleusercontent.com</string>
    <string name="empty_journal">Empty jounal click + to start writing</string>
    <string name="app_logo_desc">App Logo</string>
...
